--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
   vmImage: 'ubuntu-latest'
 variables:
  
-  Revision: $counter(format('{0}.{1}', variables['major'],variables['minor']),variables['patchversion']
+  Revision: $counter(format('{0}.{1}', variables['major'],variables['minor']),variables['patchversion'])
  
 steps:
 - script: echo $(Revision)!
