--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ variables:
   major : 1
   minor : 0
   Revision: $[counter(format('{0}.{1}', variables['major'],variables['minor']),0)]
-  versionNumber : '$(major).$(minor).$(patchversion)'
+  versionNumber : '$(major).$(minor).$(Revision)'
 name: $(versionNumber)
 steps:
 - script: echo $(versionNumber)!
