--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   minor : 0
   Revision: $[counter(format('{0}.{1}', variables['major'],variables['minor']),0)]
   versionNumber : '$(major).$(minor).$(Revision)'
-name: versionNumber
+name: $(major).$(minor).$(Revision)
 steps:
 - script: echo $(versionNumber)!
   displayName: 'Run a one-line script'
