Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,8 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 variables:
-  major : $(WallBoard.major)
-  minor : 1
+  major : 1
+  minor : 0
   Revision: $[counter(format('{0}.{1}', variables['major'],variables['minor']),0)]
   versionNumber : '$(major).$(minor).$(Revision)'
 name: $(major).$(minor).$(Revision)
