Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,12 +18,13 @@ variables:
 
 
 steps:
+
 - task: PowerShell@2
   displayName: Set the name of the build (i.e. the Build.BuildNumber)
   inputs:
     targetType: 'inline'
     script: |
-      [int] $buildIdWithOffset = ([int] $(versionNumber)) + ([int] $(offset))
+      [int] $buildIdWithOffset = ([int] $(Revision)) + ([int] $(offset))
       [string] $buildName = "$(major).$(minor).$buildIdWithOffset"
       Write-Host "Setting the name of the build to '$buildName'."
       Write-Host "##vso[build.updatebuildnumber]$buildName"
