--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,6 @@ steps:
       Write-Host "##vso[build.updatebuildnumber]$buildName"
 
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
+    echo $(buildIdWithOffset)
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
