--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,11 +10,14 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 variables:
-  major : 1
-  minor : 0
-  offset : 28
-  Revision: $[counter(format('{0}.{1}', variables['major'],variables['minor']),0)]
-  versionNumber : '$(major).$(minor).$(Revision)'
+  - name: major
+    value: 1
+  - name: minor
+    value: 0
+  - name: offset
+    value: 28
+  - name: Revision
+    value: $[counter(format('{0}.{1}', variables['major'],variables['minor']),0)]
 
 
 steps:
