--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      [int] $buildIdWithOffset = ([int] $(patch)) + ([int] $(offset))
+      [int] $buildIdWithOffset = ([int] $(updatedVersion)) + ([int] $(offset))
       [string] $buildName = "$(majorversion).$(minor).$buildIdWithOffset"
       Write-Host "Setting the name of the build to '$buildName'."
       Write-Host "##vso[build.updatebuildnumber]$buildName"
