--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,15 +21,15 @@ variables:
 name: '$(major).$(minor).$(buildVersion)'
 steps:
 
-- task: PowerShell@2
-  displayName: Set the name of the build (i.e. the Build.BuildNumber)
-  inputs:
-    targetType: 'inline'
-    script: |
-      [int] $buildIdWithOffset = ([int] $(Revision)) + ([int] $(offset))
-      [string] $buildName = "$(major).$(minor).$buildIdWithOffset"
-      Write-Host "Setting the name of the build to '$buildName'."
-      Write-Host "##vso[build.updatebuildnumber]$buildName"
+# - task: PowerShell@2
+#   displayName: Set the name of the build (i.e. the Build.BuildNumber)
+#   inputs:
+#     targetType: 'inline'
+#     script: |
+#       [int] $buildIdWithOffset = ([int] $(Revision)) + ([int] $(offset))
+#       [string] $buildName = "$(major).$(minor).$buildIdWithOffset"
+#       Write-Host "Setting the name of the build to '$buildName'."
+#       Write-Host "##vso[build.updatebuildnumber]$buildName"
 
 - script: |
     echo $(buildVersion)
