--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,10 +13,10 @@ variables:
   major : 1
   minor : 0
   offset : 28
-  build : 0
+  buildId : 0
   Revision: $[counter(format('{0}.{1}', variables['major'],variables['minor']),0)]
   versionNumber : '$(major).$(minor).$(Revision)'
-  buildVersion : $[counter(variables['build'], 28)]
+  buildVersion : $[counter(variables['buildId'], 28)]
 
 name: '$(major).$(minor).$(buildVersion)'
 steps:
