--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,12 +13,12 @@ variables:
   major : 1
   minor : 0
   offset : 28
-  buildId : 0
+  currentId : 0
   Revision: $[counter(format('{0}.{1}', variables['major'],variables['minor']),0)]
   versionNumber : '$(major).$(minor).$(Revision)'
-  buildVersion : $[counter(variables['buildId'], 28)]
+  build : $[counter(variables['currentId'], 28)]
 
-name: '$(major).$(minor).$(buildVersion)'
+name: '$(major).$(minor).$(build)'
 steps:
 
 # - task: PowerShell@2
