--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,12 +13,12 @@ variables:
   major : 1
   minor : 0
   offset : 28
-  currentId : 0
+  a : 0
   Revision: $[counter(format('{0}.{1}', variables['major'],variables['minor']),0)]
   versionNumber : '$(major).$(minor).$(Revision)'
-  build : $[counter(variables['currentId'], 28)]
+  b : $[counter(variables['a'], 40)]
 
-name: '$(major).$(minor).$(build)'
+name: '$(major).$(minor).$(b)'
 steps:
 
 # - task: PowerShell@2
