--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,10 @@ variables:
 
   Revision: $[counter(format('{0}.{1}', variables['major'],variables['minor']),0)]
   versionNumber : '$(major).$(minor).$(Revision)'
-
+  x : 0
+  y : $[counter(variables['x'], 98)]
+ 
+name: '$(major).$(minor).$(y)'
 steps:
 
 # - task: PowerShell@2
